<resources>
    <string name="app_name">Intercross</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="cross_id">Cross ID:</string>
    <string name="save_text">Save</string>
    <string name="start_from">Starts From</string>
    <string name="auto">Auto</string>
    <string name="pad_length">pad length</string>
    <string name="number">number</string>
    <string name="suffix">suffix</string>
    <string name="prefix">prefix</string>
    <string name="about_version_title">Version</string>
    <string name="about_title_other_apps">PhenoApps</string>
    <string name="about_project_lead_title">Project Lead</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_developer_trife" translatable="false">Trevor Rife</string>
    <string name="about_developer_trife_location" translatable="false">Clemson University</string>
    <string name="about_developer_trife_email" translatable="false">twrife@clemson.edu</string>
    <string name="about_email_title">Email</string>
    <string name="about_developer_trife_website" translatable="false">https://github.com/PhenoApps/Field-Book</string>
    <string name="about_contributors_title">Contributors</string>
    <string name="about_contributors_developers_title">Developers</string>
    <string name="about_translators_title">Translators</string>
    <string name="about_translators_text" translatable="false">Irazema Fuentes-Bueno,  Sandra Dunckel,  Shuangye Wu,  Narinder Singh,  Daljit Singh,  Erena Edae,  Tatiana Danilova,  Rodrigo Pedrozo,  Cristiano Lemes da Silva,  Sophie Bouchet,  Hiroyoshi Iwata,  Goro Ishikawa,  Khaled El-Shamaa, Mokhlesur Rahman, Alice Brunazzi</string>
    <string name="about_contributors_funding_title">Funding</string>
    <string name="about_contributors_funding_text_first" translatable="false">Development of </string>
    <string name="about_contributors_funding_text_after" translatable="false"> has been supported by the Collaborative Crop Research Program of The McKnight Foundation, the National Science Foundation (#1543958), and the National Institute of Food and Agriculture (#2019-67021-29931).</string>
    <string name="about_rate">Rate this app</string>
    <string name="about_technical_title">Technical Details</string>
    <string name="about_github_title">GitHub</string>
    <string name="about_licenses_title">Licenses</string>
    <string name="about_help_translate_title">Help translate</string>
    <string name="changelog_title">Changelog</string>
    <string name="libraries_title">Libraries</string>
    <string name="parents">Parents</string>
    <string name="metaData">Metadata</string>
    <string name="Seeds">Seeds</string>
    <string name="Fruits">Fruits</string>
    <string name="Flowers">Flowers</string>
    <string name="UpdateMetaData">Update Metadata</string>
    <string name="navigate_to_wishlist">Navigate to wishlist</string>
    <string name="navigate_to_crossblock">Navigate to crossblock</string>
    <string name="Clear">Clear</string>
    <string name="New">New</string>
    <string name="SelectAllRows">Select all rows</string>
    <string name="Name">Name</string>
    <string name="Code">Code</string>
    <string name="PotentialMales">Potential Males</string>
    <string name="ErrorCodeExists">Code Exists</string>
    <string name="FemaleID">Female ID:</string>
    <string name="MaleID">Male ID:</string>
    <string name="search_with_barcode_scanner">Search with barcode scanner.</string>
    <string name="continuous_scan_and_submit">Continuous scan and submit.</string>
    <string name="test">TEST</string>
    <string name="import_a_zpl_file">Import a ZPL file</string>
    <string name="zpl_default" formatted="false">
        ^XA^DFR:TEMPLATE^FS
        ^PW406
        ^LH10,10^FS
        ^FO0,0^A0,25,20^FN1^FS
        ^FO140,30^BQN,2,3,H,^FN2^FS
        ^FO140,170^A0,25,20^FN5^FS
        ^XZ
    </string>
    <string name="zpl_parameter_instructions" formatted="false">FN1–6 are ZPL fields used to pass data.\n\n<b>Required:</b> The name of the template must be TEMPLATE as shown in the above example.\n\n<b>For basic cross prints</b>\n\tFN1=the cross id\n\tFN2=the cross id but should be used for barcodes\n\tFN3=the female cross id\n\tFN4=the male cross id\n\tFN5=the timestamp of the cross\n\tFN6=the person who made the cross.\n<b>Note:</b> parent label prints cannot be customized yet.\nUse Labelary: http://labelary.com/viewer.html to define a label easily.\nThe template is designed for 2"x1" labels\nUse Zebra Printer Setup app to calibrate and define media settings.</string>
    <string name="import_zpl">Import ZPL</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="print">Print</string>
    <string name="none">None</string>
    <string name="pattern">Pattern</string>
    <string name="uuid">UUID</string>
    <string name="male_parent">Male Parent</string>
    <string name="female_parent">Female Parent</string>
    <string name="crosses">Crosses</string>
    <string name="import_file">Import</string>
    <string name="parents_header_code_id">codeId</string>
    <string name="parents_header_readable_name">name</string>
    <string name="parents_header_sex">sex</string>
    <string name="wishlist_header_female_id">femaleDbId</string>
    <string name="wishlist_header_male_id">maleDbId</string>
    <string name="wishlist_header_female_name">femaleName</string>
    <string name="wishlist_header_male_name">maleName</string>
    <string name="wishlist_header_type">wishType</string>
    <string name="wishlist_header_min">wishMin</string>
    <string name="wishlist_header_max">wishMax</string>
    <string name="parental_navigation">Parents</string>
    <string name="parents_dont_exist">Parents do not exist in the DB</string>
    <string name="navigate_to_summary">Navigate to summary</string>
    <string name="add_female">Add Female</string>
    <string name="add_male_group">Add Male Group</string>
    <string name="add_male">Add Male</string>
    <string name="wishlist_is_empty">The wishlist is empty, import a wishlist first.</string>
    <string name="export">Export</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="summary_and_wishlist_empty">Summary and wishlist are empty.</string>
    <string name="parents_table_empty">Parents table is empty.</string>
    <string name="summary_empty">No crosses have been made.</string>
    <string name="parent_event_does_not_exist">Parent does not exist as a cross event.</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="qr_code_for_parent">QR Code for parent</string>
    <string name="button_to_scan_next_text">Button to scan next text entry.</string>
    <string name="barcode_preview_image">Barcode preview image.</string>
    <string name="zxing_scan_mode_single">Single Mode</string>
    <string name="zxing_status_single">Single</string>
    <string name="zxing_scan_mode_search">Search Mode</string>
    <string name="zxing_scan_mode_continuous">Continuous Mode</string>
    <string name="choose_a_file_to_import">Choose a file to import.</string>
    <string name="choose_an_export_file_path">Choose an export file path.</string>
    <string name="exported_file_name">Exported file name.</string>
    <string name="default_crosses_export_file_name">crosses</string>
    <string name="ask_for_new_name">Enter a new file name</string>
    <string name="crosses_export_mom_header">femaleObsUnitDbId</string>
    <string name="crosses_export_dad_header">maleObsUnitDbId</string>
    <string name="crosses_export_name_header">readableName</string>
    <string name="crosses_export_date_header">timestamp</string>
    <string name="crosses_export_person_header">person</string>
    <string name="crosses_export_experiment_header">experiment</string>
    <string name="crosses_export_type_header">type</string>
    <string name="crosses_export_sex_header">sex</string>
    <string name="crosses_export_fruits_header">fruits</string>
    <string name="crosses_export_flowers_header">flowers</string>
    <string name="crosses_export_seeds_header">seeds</string>
    <string name="crosses_export_id_header">crossDbId</string>
    <string name="ask_user_to_append_or_drop_parents">A parents table already exists.</string>
    <string name="ask_user_to_append_or_drop_wishlist">A wishlist table already exists.</string>
    <string name="start_fresh">Start fresh</string>
    <string name="append">Append</string>
    <string name="cross_id_already_exists_as_event">Identifier already used as a cross event.</string>
    <string name="cross_id_already_exists_as_parent">Identifier already used as a parent.</string>
    <string name="parent_already_exists">Parent code already exists.</string>
    <string name="search_barcode_description">Search by barcode</string>
    <string name="single_scan_description">Scan a single barcode</string>
    <string name="continuous_scan_description">Scan a sequence of barcodes</string>
    <string name="delete_cross_entry_title">Delete this cross entry?</string>
    <string name="no_device_paired">No device paired</string>
    <string name="printer_open">Printer is open</string>
    <string name="printer_paused">Printer is paused</string>
    <string name="printer_empty">Printer is empty</string>
    <string name="printner_not_connected">Printer not connected</string>
    <string name="unknown">Unknown</string>
    <string name="wish_min_complete">Wish minimum completed.</string>
    <string name="wish_max_complete">Wish maximum completed.</string>
    <string name="you_must_enter_cross_name">You must enter a cross name.</string>
    <string name="you_must_enter_female_name">You must enter a female name.</string>
    <string name="you_must_enter_male_name">You must enter a male name.</string>
    <string name="person">Person</string>
    <string name="set_person">Set Person</string>
    <string name="person_must_be_set">Person must be set before crosses can be made.</string>
    <string name="settings_label">Settings</string>
    <string name="no_crosses_made">None</string>
    <string name="wishlist_less_than_one_third">&lt;=33%</string>
    <string name="wishlist_less_than_two_third">&lt;=66%</string>
    <string name="wishlist_more_than_two_third">&gt;=66%</string>
    <string name="wishlist_achieved_legend_label">Minimum</string>
    <string name="wishlist_maximum_met_legend_label">Maximum</string>
    <string name="home">Home</string>
    <string name="submit">Submit</string>
    <string name="dialog_metadata_property_hint">Property Name</string>
    <string name="dialog_metadata_default_hint">Default Value</string>
    <string name="crossblock">Cross Block</string>
    <string name="preferences_profile_fragment_label">Profile</string>
    <string name="preferences_printing_fragment_label">Printing</string>
    <string name="preferences_database_fragment_label">Database</string>
    <string name="dialog_account_creator_username_hint">New user name</string>
    <string name="dialog_account_creator_password_hint">Optional password</string>
    <string name="dialog_account_creator_summary">To save your account locally, please enter user credentials.</string>
    <string name="toolbar_parents_add_wish">Add a wishlist item</string>
    <string name="menu_cross_count_delete_all_title">Delete All</string>
    <string name="menu_cross_count_expand_more">Expand Columns</string>
    <string name="menu_parents_delete_title">Delete selected parents.</string>
    <string name="menu_parents_print_title">Print selected parents.</string>
    <string name="default_value">Default Value</string>
    <string name="prefs_behavior_title">Behavior</string>
    <string name="dialog_save">Save</string>
</resources>