<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_parents_print"
        android:icon="@drawable/ic_cross_print"
        android:title="@string/menu_parents_print_title"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_parents_delete"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/menu_parents_delete_title"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_nv_import_white"
        android:title="@string/import_file"
        app:showAsAction="ifRoom"/>
</menu>