<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/cell"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/dialog_metadata_updater_property_edit_text"
        android:hint="@string/dialog_metadata_property_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/dialog_metadata_updater_value_edit_text"
        android:hint="@string/dialog_metadata_default_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_metadata_updater_property_edit_text"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/dialog_metadata_updater_value_delete_button"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_metadata_updater_value_submit_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_metadata_updater_value_edit_text"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/dialog_metadata_updater_value_submit_button"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/submit"
        app:layout_constraintStart_toEndOf="@id/dialog_metadata_updater_value_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_metadata_updater_value_edit_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>