<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preferences"
    app:startDestination="@id/preferences_fragment">

    <include app:graph="@navigation/metadata"/>

    <fragment
        android:id="@+id/preferences_fragment"
        android:name="org.phenoapps.intercross.fragments.preferences.PreferencesFragment"
        android:label="@string/settings_label">

        <action android:id="@+id/action_from_preferences_fragment_to_profile_fragment"
            app:destination="@+id/profile_preference_fragment"
            app:launchSingleTop="true"/>

        <action android:id="@+id/action_from_preferences_fragment_to_printing_fragment"
            app:destination="@+id/printing_preference_fragment"
            app:launchSingleTop="true"/>

        <action android:id="@+id/action_from_preferences_fragment_to_database_fragment"
            app:destination="@+id/database_preference_fragment"
            app:launchSingleTop="true"/>

<!--        <action android:id="@+id/action_from_settings_to_brapi_fragment"-->
<!--            app:destination="@+id/brapi_preference_fragment"-->
<!--            app:launchSingleTop="true"/>-->

        <action android:id="@+id/action_from_preferences_fragment_to_about_fragment"
            app:destination="@+id/about_fragment"
            app:launchSingleTop="true"/>

        <action android:id="@+id/action_to_about"
            app:destination="@id/about_fragment"
            app:launchSingleTop="true" />

        <action
            android:id="@+id/action_from_preferences_fragment_to_behavior_preferences_fragment"
            app:destination="@id/behavior_preferences_fragment"
            app:launchSingleTop="true"/>
    </fragment>

    <fragment android:id="@+id/profile_preference_fragment"
        android:name="org.phenoapps.intercross.fragments.preferences.ProfileFragment"
        android:label="@string/preferences_profile_fragment_label"/>

    <fragment android:id="@+id/printing_preference_fragment"
        android:name="org.phenoapps.intercross.fragments.preferences.PrintingFragment"
        android:label="@string/preferences_printing_fragment_label">
        <action
            android:id="@+id/action_to_import_zpl_fragment"
            app:destination="@id/import_zpl_fragment"
            app:launchSingleTop="true" />
    </fragment>

    <fragment android:id="@+id/database_preference_fragment"
        android:name="org.phenoapps.intercross.fragments.preferences.DatabaseFragment"
        android:label="@string/preferences_database_fragment_label"/>

<!--    <fragment android:id="@+id/brapi_preference_fragment"-->
<!--        android:name="org.phenoapps.intercross.fragments.preferences.BrapiFragment"-->
<!--        android:label="@string/preferences_brapi_fragment_label"/>-->

    <fragment
        android:id="@+id/behavior_preferences_fragment"
        android:name="org.phenoapps.intercross.fragments.preferences.BehaviorPreferencesFragment"
        android:label="@string/prefs_behavior_title">
        <action
            android:id="@+id/action_behavior_preferences_fragment_to_pattern_fragment"
            app:destination="@id/pattern_fragment" />
        <action
            android:id="@+id/action_behavior_preferences_fragment_to_metadataList"
            app:destination="@id/metadata_navigation" />
    </fragment>

</navigation>
