<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/frag_metadata_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:inputType="text"
            android:autofillHints=""/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/default_value"
            android:id="@+id/frag_metadata_default_value_et"
            app:layout_constraintTop_toBottomOf="@id/frag_metadata_name_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            android:inputType="text"
            android:autofillHints="" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/frag_metadata_submit_btn"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/submit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

