<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <com.evrencoskun.tableview.TableView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/fragment_crossblock_table_view"
            android:orientation="vertical"
            app:allow_click_inside_cell="true"
            app:allow_click_inside_column_header="true"
            app:allow_click_inside_row_header="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/legend_blank"/>

        <TextView
            android:id="@+id/legend_blank"
            style="@style/LegendText"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@color/progressBlank"
            android:text="@string/no_crosses_made"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:layout_constraintEnd_toStartOf="@id/legend_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_crossblock_table_view" />

        <TextView
            android:id="@+id/legend_red"
            style="@style/LegendText"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@color/progressLessThanOneThird"
            android:text="@string/wishlist_less_than_one_third"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:layout_constraintEnd_toStartOf="@id/legend_orange"
            app:layout_constraintStart_toEndOf="@id/legend_blank"
            app:layout_constraintTop_toBottomOf="@id/fragment_crossblock_table_view"/>

        <TextView
            android:id="@+id/legend_orange"
            style="@style/LegendText"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@color/progressLessThanTwoThird"
            android:text="@string/wishlist_less_than_two_third"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:layout_constraintEnd_toStartOf="@id/legend_yellow"
            app:layout_constraintStart_toEndOf="@id/legend_red"
            app:layout_constraintTop_toBottomOf="@id/fragment_crossblock_table_view"/>

        <TextView
            android:id="@+id/legend_yellow"
            style="@style/LegendText"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@color/progressMoreThanTwoThird"
            android:text="@string/wishlist_more_than_two_third"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:layout_constraintEnd_toStartOf="@id/legend_green"
            app:layout_constraintStart_toEndOf="@id/legend_orange"
            app:layout_constraintTop_toBottomOf="@id/fragment_crossblock_table_view"/>

        <TextView
            android:id="@+id/legend_green"
            style="@style/LegendText"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@color/progressMin"
            android:text="@string/wishlist_achieved_legend_label"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:layout_constraintEnd_toStartOf="@id/legend_dark_green"
            app:layout_constraintStart_toEndOf="@id/legend_yellow"
            app:layout_constraintTop_toBottomOf="@id/fragment_crossblock_table_view"/>

        <TextView
            android:id="@+id/legend_dark_green"
            style="@style/LegendText"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:background="@color/progressMax"
            android:text="@string/wishlist_maximum_met_legend_label"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/legend_green"
            app:layout_constraintTop_toBottomOf="@id/fragment_crossblock_table_view" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_bot_nav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>